# poc-homography

./: .env.example  .gitignore  .pre-commit-config.yaml  CAMERA_CONFIG_MIGRATION.md  Cartografia_valencia.kml  Cartografia_valencia_recreated.0.kml  Cartografia_valencia_recreated.kml  HOMOGRAPHY_FIX.md  HOMOGRAPHY_MAP_POINTS_SUMMARY.md  MAP_POINTS_FORMAT.md  README.md  README_VERIFICATION.md  Sagunto-Grimaldi-updated.kml  WEBAPP_MIGRATION.md  __init__.py  calibrate_camera.py  calibration_storage.py  camera_config.py  camera_geometry.py  camera_position_deriver.py  check_camera_tilt.py  coordinates_converter.py  debug_homography.py  feature_match_homography.py  gcp_map.html  gcp_validation.py  gcps_Valte_20251211_124557.yaml  gcps_from_map_fixed.yaml  gps_distance_calculator.py  homography_config.py  homography_config.yaml  homography_factory.py  homography_interface.py  intrinsic_extrinsic_homography.py  learned_homography.py  main.py  map_points.json  ptz_intrinsics_and_pose.md  pyproject.toml  quick_test.py  (+6 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
calibrations/: README.md
config/: gcps_valte_test.yaml  gcps_valte_test2.yaml  homography_config.yaml  valte_gcps.yaml
docs/: CALIBRATION_PROCEDURE.md  GCP_CAPTURE_WORKFLOW.md  GPS_VALIDATION_GUIDE.md  HIKVISION_PTZ_API_SUMMARY.md  MAP_POINT_HOMOGRAPHY.md  MAP_POINT_HOMOGRAPHY_QUICK_START.md  decisions.md  homography_verification_guide.md  ptz_commands.md
docs/issues/: bag_a_security.md  bag_b_technical_debt.md  refactor-calibration-data-model.md
examples/: demo_map_point_homography.py
output/: README.md
poc_homography/: __init__.py  auto_calibrator.py  calibration_history.py  camera_config.py  camera_geometry.py  camera_parameters.py  camera_position_deriver.py  coordinate_converter.py  coordinates.py  coordinates_converter.py  feature_match_homography.py  gcp_calibrator.py  gcp_validation.py  geotiff_utils.py  gps_distance_calculator.py  height_calibration.py  homography_config.py  homography_factory.py  homography_interface.py  homography_map_points.py  homography_parameters.py  intrinsic_extrinsic_homography.py  kml_generator.py  learned_homography.py  map_debug_server.py  mask_matcher.py  multi_frame_calibrator.py  multi_frame_io.py  multi_frame_session.py  pixel_point.py  satellite_layers.py  server_utils.py  types.py
poc_homography/calibration/: __init__.py  annotation.py  comprehensive.py  interactive.py  projection.py
poc_homography/camera/: __init__.py  intrinsics.py
poc_homography/cli/: __init__.py  calibrate.py  camera.py  gcp.py  interactive.py  main.py  test_cmds.py
poc_homography/gcp/: __init__.py  verify.py
poc_homography/homography/: __init__.py  config.py  feature_match.py  interface.py  intrinsic_extrinsic.py  map_points.py  parameters.py
poc_homography/kml/: __init__.py  geo_config.py  geo_point_registry.py  kml.py  kml_point.py  point_extractor.py
poc_homography/kml/templates/: placemark.kml.j2  points.kml.j2
poc_homography/map_points/: __init__.py  kml_converter.py  map_point.py  map_point_registry.py
poc_homography/testing/: __init__.py  data_generator.py  sam3.py
poc_homography/validation/: __init__.py  camera_model.py
ptz_discovery_and_control/hikvision/: HIKVISION_PTZ_API_SUMMARY.md  hikvision_ptz_discovery.py  test_basic_connection.py  test_status_endpoint.py
tests/: check_camera_tilt.py  debug_homography.py  demo_affine_matrix_a.py  quick_test.py  test_affine_matrix_a.py  test_affine_matrix_integration.py  test_auto_calibrator_projection.py  test_basic_connection.py  test_calibration_distortion_handling.py  test_calibration_table.py  test_calibration_validation.py  test_camera_footprint.py  test_camera_geometry_geotransform.py  test_camera_geometry_properties.py  test_camera_position_deriver.py  test_coordinate_conversion_consistency.py  test_coordinate_converter_dual_systems.py  test_coordinate_converter_properties.py  test_cross_module_consistency_properties.py  test_distortion_correction.py  test_feature_match_homography.py  test_gcp_calibrator.py  test_gcp_calibrator_properties.py  test_gcp_round_trip_validation.py  test_gcp_validation.py  test_geotiff_affine_transform.py  test_gps_coordinate_flow.py  test_gps_distance_calculator_properties.py  test_gps_reverse.py  test_height_calibration.py  test_hikvision_ptz.py  test_homography_consistency.py  test_homography_map_points.py  test_homography_map_points_integration.py  test_immutable_patterns.py  test_intrinsic_extrinsic_homography_properties.py  test_kml_generation.py  test_map_visualization.py  test_mask_matcher.py  test_multi_frame_calibrator.py  (+18 more)
tests/fixtures/: valte_gcp_data.json
tests/homography/: __init__.py  test_calibration_table.py  test_intrinsic_extrinsic.py  test_map_points.py  test_map_points_integration.py  test_planar_synthetic.py
tests/kml/: __init__.py  test_geo_config.py  test_geo_point_registry.py  test_kml.py  test_kml_point.py  test_pixel_point.py
tools/: README.md  README_test_data_generator.md  calibrate_projection.py  capture_gcps.py  capture_gcps_web.py  comprehensive_calibration.py  convert_kml_to_map_points.py  debug_coordinate_transforms.py  debug_y_scaling.py  extract_kml_points.py  get_camera_intrinsics.py  interactive_calibration.py  multi_frame_capture.py  test_data_generator.py  test_sam3_prompts.py  unified_gcp_tool.py  validate_camera_model.py  verify_gcp_gps.py
tools/cli/: __init__.py  calibrate_projection.py  capture_gcps_web.py  comprehensive_calibration.py  debug_coordinate_transforms.py  debug_y_scaling.py  extract_kml_points.py  get_camera_intrinsics.py  interactive_calibration.py  test_data_generator.py  test_sam3_prompts.py  unified_gcp_tool.py  validate_camera_model.py  verify_gcp_gps.py
webapp/: README.md  manage.py
webapp/gcp/: apps.py  urls.py  views.py
webapp/gcp/static/gcp/css/: main.css
webapp/gcp/static/gcp/js/: main.js
webapp/gcp/templates/gcp/: base.html  debug_map.html  gcp_capture.html  index.html
webapp/gcp/templatetags/: __init__.py  satellite_layers.py
webapp/homography_web/: asgi.py  settings.py  urls.py  wsgi.py
